--- a/product.html
+++ b/product.html
@@ -20,7 +20,7 @@
 				</ul>
 			</div>
 			<div class="banner"></div>
-			<div class="tel">联系电话：0510-88259855</div>
+			<div class="tel">联系电话：0535-2768759</div>
 		</div>
 		<div class="content">
 			<div class="content-inner">
@@ -44,28 +44,28 @@
 							</div>
 							<div class="contain">
 								<p class="product">
-									名称：无锡精制佳机械制造有限公司 
+									名称：烟台初芒国际贸易有限公司
 								</p>
 								<p class="product">
-									地址：无锡市锡山区庄桥工业园
+									地址：山东省烟台市芝罘区红旗中路186号
 								</p>
 								<p class="product">
-									邮编：214101
+									邮编：264000
 								</p>
 								<p class="product">
-									电话：0510-88259855
+									电话：0535-2768759
 								</p>
 								<p class="product">
-									微信：13606191280
+									微信：chuliner
 								</p>
 								<p class="product">
-									联系人：倪晓东 
+									联系人：初琳 女士
 								</p>
 								<p class="product">
-									手机：13606191280
+									手机：13854552067
 								</p>
 								<p class="product">
-									邮箱：1551869036@qq.com
+									邮箱：ytchulin@163.com
 								</p>
 								<p class="product">
 									网址：http://ytcmit.com
