--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 				</ul>
 			</div>
 			<div class="banner"></div>
-			<div class="tel">联系电话：0510-88259855</div>
+			<div class="tel">联系电话：0535-2768759</div>
 		</div>
 		<div class="content">
 			<div class="content-inner">
@@ -44,28 +44,28 @@
 							</div>
 							<div class="contain">
 								<p class="product">
-									名称：无锡精制佳机械制造有限公司 
+									名称：烟台初芒国际贸易有限公司
 								</p>
 								<p class="product">
-									地址：无锡市锡山区庄桥工业园
+									地址：山东省烟台市芝罘区红旗中路186号
 								</p>
 								<p class="product">
-									邮编：214101
+									邮编：264000
 								</p>
 								<p class="product">
-									电话：0510-88259855
+									电话：0535-2768759
 								</p>
 								<p class="product">
-									微信：13606191280
+									微信：chuliner
 								</p>
 								<p class="product">
-									联系人：倪晓东 
+									联系人：初琳 女士
 								</p>
 								<p class="product">
-									手机：13606191280
+									手机：13854552067
 								</p>
 								<p class="product">
-									邮箱：1551869036@qq.com
+									邮箱：ytchulin@163.com
 								</p>
 								<p class="product">
 									网址：http://ytcmit.com
@@ -78,21 +78,14 @@
 							公司简介
 						</div>
 						<div class="pageBd">
-							无锡精制佳机械制造有限公司位于无锡市锡山区庄桥工业园。主要从事高速滚丝机及配件、震动盘以及各类机械加工。其中高速滚丝机技术参数为：
-							<p>滚丝直径	mm	2.0-4.1</p>
-							<p>滚丝钉子范围	mm	30-90</p>
-							<p>生产率	只/分	50-1150</p>
-							<p>电机功率	kw	5.5</p>
-							<p>振动斗加料量	kg	5</p>
-							<p>设备重量	kg	1000</p>
-							<p>外形尺寸	mm	1500×1360×1500</p>
+							烟台初芒国际贸易有限公司位于山东省烟台市，交通便利，具有企业发展的优越条件。主要从事日用百货、生鲜果蔬、汽车配件、建筑材料、五金交电、电子产品、仪器仪表、通讯器材、焦炭、机电产品、家用电器、健身器材、酒店用品、家具、纺织品、服装鞋帽、工艺品、化妆品、日用百货、日用杂品、办公用品的批发、零售及网上销售；软件开发、商务咨询服务；广告制作、代理、设计、发布。
 						</div>
 						
 					</div>
 				</div>
 			</div>
 			<div class="bottom">
-				 版权所有 Copyright(C)2012 无锡精制佳机械制造有限公司
+				 版权所有 Copyright(C)2012 烟台初芒国际贸易有限公司
 			</div>
 		</div>
 
