--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 						<div class="pageBd">
 							烟台初芒国际贸易有限公司位于山东省烟台市，交通便利，具有企业发展的优越条件。主要从事日用百货、生鲜果蔬、汽车配件、建筑材料、五金交电、电子产品、仪器仪表、通讯器材、焦炭、机电产品、家用电器、健身器材、酒店用品、家具、纺织品、服装鞋帽、工艺品、化妆品、日用百货、日用杂品、办公用品的批发、零售及网上销售；软件开发、商务咨询服务；广告制作、代理、设计、发布。
 						</div>
-						<div class="pageTitle">
-							营业许可
-						</div>
+						<!-- <div class="pageTitle"> -->
+							<!-- 主要产品 -->
+						<!-- </div> -->
 						<div class="pageBd">
 							
 						</div>
